simple events api to get some events listed
