# src/main/resources/api.yaml
@@ -67,6 +67,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/NewAccessTokenResponse'
 
+  /events:
+    get:
+      security:
+        - bearerAuth: []
+      summary: lists
+      operationId: nextEvents
+      responses:
+        '200':
+          description: A new access token object
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/NextEvents'
+
 components:
   schemas:
     EchoResponse:
@@ -93,6 +107,21 @@ components:
         accessToken:
           type: string
           format: uuid
+
+    Event:
+      type: object
+      properties:
+        title:
+          type: string
+        date:
+          type: string
+          format: date-time
+
+    NextEvents:
+      type: array
+      items:
+        $ref: '#/components/schemas/Event'
+
 
   responses:
     BadRequestError:
